data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_898.wast
;; 9. **Loop with Return Value-Based Index for Call_Indirect**:    - Description: Implement a loop where the result of a function return value determines the index for a `call_indirect` instruction within the loop.    - Constraint: Validate that function returns correctly determine valid indices and avoid out-of-bounds or invalid indirect calls.    - Relation: Incorrect return value processing can lead to improper indirect function indexes, altering control flow.

(assert_invalid
  (module
    (type $id (func (result i32)))
    (table funcref (elem (i32.const 0)))
    (func $test_func (result i32) (i32.const 0))
    (func $loop_test
      (block
        (loop (result i32)
          (call $test_func)
          (call_indirect (type $id))
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)